2011-11-02  Ozkan Sezer  <sezeroz@gmail.com>

	Break stdio/asprintf.c and misc/uchar.c into pieces, one function
	per compilation unit:
	* stdio/vasprintf.c: New.
	* misc/uchar_c16rtomb.c: New.
	* misc/uchar_c32rtomb.c: New.
	* misc/uchar_mbrtoc16.c: New.
	* misc/uchar_mbrtoc32.c: New.
	* Makefile.am: Adjust.
	* Makefile.in: Regenerate.

2011-11-01  Ozkan Sezer  <sezeroz@gmail.com>

	* stdio/asprintf.c: Define __CRT__NO_INLINE before including any
	headers.
	(__mingw_asprintf, __mingw_vasprintf): Use __restrict__ for first
	and second args.

2011-10-29  Jonathan Yong  <jon_y@users.sourceforge.net>

	* lib32/dwmapi.def: New.
	* Makefile.am: Added lib32/libdwmapi.a
	* Makefile.in: Regenerated.

2011-10-09  Ruben Van Boxem  <vanboxem.ruben@gmail.com>

	* misc/isblank.c: Replaced _cdecl by __cdecl.
	* misc/iswblank.c: Likewise.

2011-09-27  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/uchar.c (mbrtoc32): Mark last 'ps' argument as unused.
	(c32rtomb): Likewise.

2011-09-27  Ruben Van Boxem  <vanboxem.ruben@gmail.com>
	    Ozkan Sezer  <sezeroz@gmail.com>

	* misc/uchar.c: New source with initial implementations of mbrtoc16(),
	c16rtomb(), mbrtoc32() and c32rtomb() for uchar.h.
	* testcases/uchar_size_1.c: A new basic test case for uchar.h

2011-09-27  Ozkan Sezer  <sezeroz@gmail.com>

	* lib64/msvcr80.def (fpreset): Mark as data for bug #3413674.
	* lib64/msvcr90d.def (fpreset): Likewise.
	* lib64/crtdll.def (fpreset): Likewise.
	* lib64/msvcrt.def (fpreset): Likewise.

2011-09-16  Jonathan Yong  <jon_y@users.sourceforge.net>

	* libsrc/ksuser.c (KSPROPSETID_MemoryTransport): New.
	(KSPROPSETID_VramCapture): New.

2011-08-24  Kai Tietz  <ktietz@redhat.com>

	* misc/tfind.c, misc/tsearch.c, misc/tdelete.c, misc/twalk.c:
	Fix nonsense with key argument checking for NULL and fixed
	issue for new key insertation.  It might happens that tree
	gets into denormalized state, but well, this is something
	for a different patch.

2011-08-09  Ozkan Sezer  <sezeroz@gmail.com>
